  is still available as the "emacs" style (which was an alias before).

- Fixed a bug in the command line code that disallowed ``-O`` options
  when using the ``-S`` option.

- Fixed a bug in the `RawTokenFormatter`.

- The `get_style_defs` method of HTML formatters now uses the `cssclass`
  option as the default selector if it was given.

- Added a Redcode lexer, thanks to Adam Blinkinsop.


Version 0.7.1
-------------
(released Feb 15, 2007)

- Fixed little highlighting bugs in the Python, Java, Scheme and Apache
  Config lexers.

- Updated the included manpage.

- Included a built version of the documentation in the source tarball.


Version 0.7
-----------
(codename Faschingskrapfn, released Feb 14, 2007)

- Added a MoinMoin parser that uses Pygments. With it, you get Pygments
  highlighting in Moin Wiki pages.

- Changed the exception raised if no suitable lexer, formatter etc. is
  found in one of the `get_*_by_*` functions to a custom exception,
  `pygments.util.ClassNotFound`. It is, however, a subclass of `ValueError`
  in order to retain backwards compatibility.

- Added a `-H` command line option which can be used to get the docstring
  of a lexer, formatter or filter.

- Made the handling of lexers and formatters more consistent. The aliases
  and filename patterns of formatters are now attributes on them. 

- Added an OCaml lexer, thanks to Adam Blinkinsop.

- Made the HTML formatter more flexible, and easily subclassable in order
  to make it easy to implement custom wrappers, e.g. alternate line
  number markup. See the documentation.

- Added an `outencoding` option to all formatters, making it possible
  to override the `encoding` (which is used by lexers and formatters) when
  using the command line interface. Also, if using the terminal formatter
  and the output file is a terminal and has an encoding attribute, use it
  if no encoding is given.

- Made it possible to just drop style modules into the `styles` subpackage